// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftViewShiftOeeBlock > renders correctly 1`] = `
<div
  class="d-flex flex-column align-center"
>
  <div
    class="shift-view-label d-flex label-class"
  >
    OEE (70%) 
  </div>
  <!--v-if-->
</div>
`;

exports[`ShiftViewShiftOeeBlock > renders correctly in compact mode 1`] = `
<div
  class=""
>
  <div
    class="shift-view-label d-flex label-class"
  >
    OEE (70%) 
  </div>
  <oee-percentage-value-stub
    valueclass="value-class"
  />
</div>
`;

exports[`ShiftViewShiftOeeBlock > renders correctly in expanded mode 1`] = `
<div
  class="d-flex flex-column align-center"
>
  <div
    class="shift-view-label d-flex label-class"
  >
    OEE (70%) 
  </div>
  <oee-percentage-value-stub
    valueclass="value-class"
  />
</div>
`;
